# fnv

./: .gitignore  README.md  RESEARCH.md
fnv_edit/: Curve.cpp  Curve.h  Curve.hpp  FileManager.cpp  FileManager.hpp  Point.cpp  Point.h  Point.hpp  fnv.sln  fnv.vcxproj  fnv.vcxproj.filters  main.cpp
fnv_edit_legacy/: Curve.hpp  Point.hpp
fnvcli/: Cargo.toml
fnvcli/src/: curve.rs  file_reader.rs  lib.rs  main.rs  point.rs
