[package]
name = "fnvcli"
version = "0.1.0"
authors = ["artemetra <artemlukin15@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = { version = "3.1.18", features = ["derive"] }
anyhow = "1.0"
log = "0.4.17"